Fortnite Emotes Extended Updated

--- a/Plugins/Fortnite Emotes Extended/cfg/sourcemod/fortnite_emotes.cfg
+++ b/Plugins/Fortnite Emotes Extended/cfg/sourcemod/fortnite_emotes.cfg
@@ -33,3 +33,15 @@ sm_emotes_hide_weapons "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
 sm_emotes_sounds "1"
+
+// Sound volume for the emotes.
+// -
+// Default: "0.5"
+sm_emotes_soundvolume "0.5"
+
+// Teleport back to the exact position when he started to dance. (Some maps need this for teleport triggers)
+// -
+// Default: "0"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+sm_emotes_teleportonend "0"
