Delete Deagle & SM Hosties & Fortnite Emotes & Advertisements Update

--- a/Plugins/Advertisements/addons/sourcemod/configs/advertisements.cfg
+++ b/Plugins/Advertisements/addons/sourcemod/configs/advertisements.cfg
@@ -16,7 +16,7 @@
 	{
 		"Enabled"					"1"
 		"Delay"						"5.0"
-		"en"						"{darkred}*********************************************\n{darkred}> {lime}Köszöntünk a {orange}★ Magyar Public ★ {lime}szerverén, {lightblue}{PLAYERNAME}{lime}!\n{darkred}> {orchid}Kellemes szórakozást kívánunk!\n{darkred}> {lightblue}Steam: {yellow}steamcommunity.com/groups/GroupName\n{darkred}*********************************************"
+		"en"						"{darkred}*********************************************\n{darkred}> {lime}Köszöntünk a {orange}★ Magyar Public ★ {lime}szerverén, {lightblue}{PLAYERNAME}{lime}!\n{darkred}> {orchid}Kellemes szórakozást kívánunk!\n{darkred}> {lightblue}Steam csoport: {yellow}steamcommunity.com/groups/GroupName\n{darkred}*********************************************"
 		"type"						"T"
 	}
 
