--- a/Plugins/SM, ENT Hosties - Last Request/cfg/sourcemod/sm_hosties.cfg
+++ b/Plugins/SM, ENT Hosties - Last Request/cfg/sourcemod/sm_hosties.cfg
@@ -73,8 +73,8 @@ sm_hosties_display_advert "0"
 
 // Sets the game description tag.
 // -
-// Default: "> [AntifragClan - JailBreak] <"
-sm_hosties_gamedesc_tag "> [AntifragClan - JailBreak] <"
+// Default: "> [JailBreak] <"
+sm_hosties_gamedesc_tag "> [JailBreak] <"
 
 // Enable or disable Last Requests (the !lr command): 0 - disable, 1 - enable
 // -
