server.cfg Updated

--- a/Default Pack/Server Default Configs/cfg/server.cfg
+++ b/Default Pack/Server Default Configs/cfg/server.cfg
@@ -111,14 +111,14 @@ mp_backup_round_auto									0
 mp_backup_round_file									0
 mp_backup_round_file_last								0
 mp_backup_round_file_pattern							0
-mp_ct_default_grenades									""
+mp_ct_default_grenades									0
 mp_ct_default_melee										"weapon_knife"
 mp_ct_default_secondary									"weapon_hkp2000"
-mp_ct_default_primary									""
-mp_t_default_grenades									""
+mp_ct_default_primary									0
+mp_t_default_grenades									0
 mp_t_default_melee										"weapon_knife"
 mp_t_default_secondary									"weapon_glock"
-mp_t_default_primary									""
+mp_t_default_primary									0
 mp_teamname_1											"> CT Team <"
 mp_teamname_2											"> T Team <"
 mp_teamflag_1											"HU"
@@ -126,8 +126,6 @@ mp_teamflag_2											"HU"
 
 // Sv Cvars
 sv_falldamage_scale										1
-sv_falldamage_to_below_player_multiplier				1
-sv_falldamage_to_below_player_ratio						0
 sv_damage_print_enable									1
 sv_forcepreload											1
 sv_gravity												800
