--- a/Plugins/SourceBans/Game/addons/sourcemod/configs/sourcebans/sourcecomms.cfg
+++ b/Plugins/SourceBans/Game/addons/sourcemod/configs/sourcebans/sourcecomms.cfg
@@ -9,13 +9,13 @@
 		"OnlyWhiteListServers"						"0"
 	}
 
-	"CommsReasons"
+	"CommsReasons" //First: Reason to Web | Second: Reason to Admin Menu
 	{
 		"Buta voltál. :)"							"Buta volt"
 		"Külföldi származás."						"Külföldi származás"
 	}
 
-	"CommsTimes" //First: Reason to Web | Second: Reason to Admin Menu
+	"CommsTimes"
 	{
 		"0"											"Végleges"
 		"60"										"1 óra"
