Proxy Killer Updated

--- a/Plugins/Proxy Killer/cfg/sourcemod/ProxyKiller-Config.cfg
+++ b/Plugins/Proxy Killer/cfg/sourcemod/ProxyKiller-Config.cfg
@@ -1,14 +1,21 @@
 "ProxyKiller"
 {
-	"proxycheck.io"
-	{
-		"url"			"http://proxycheck.io/v2/{client_ip}"
-		"token"			"{client_ip}.proxy"
-		"tokenvalue"	"yes"
-		"params"
-		{
-			"vpn"		"1"
-			"tag"		"My server"
-		}
-	}
+    "proxycheckio_key"  "Get yours from https://proxycheck.io/"
+
+    "proxycheck.io"
+    {
+        "method"    "GET"
+        "url"       "http://proxycheck.io/v2/{ip}"
+        "params"
+        {
+            "vpn"   "1"
+            "key"   "{{proxycheckio_key}}"
+        }
+        "response"
+        {
+            "type"      "json"
+            "object"    "{ip}.proxy"
+            "value"     "yes"
+        }
+    }
 }
