Chat Processor Updated | Advanced Admin Updated | Chicken Big Spawner Added | DroneGun Spawner Updated | Drop Money Added | ExoJump Giver Added | Fix Angles Added | Give Weapons Added | NoScope Round Updated | Player Colors Added | Soccer Ball Spawner Added | Invisible Added

--- a/Plugins/NoScope Round/cfg/sourcemod/noscope_round.cfg
+++ b/Plugins/NoScope Round/cfg/sourcemod/noscope_round.cfg
@@ -16,8 +16,8 @@ noscope_sound_enabled "0"
 
 // Path of the sound played when Noscope round
 // -
-// Default: ""
-noscope_sound_path ""
+// Default: "noscope_round/test_your_might_v2.mp3"
+noscope_sound_path "noscope_round/test_your_might_v2.mp3"
 
 // Enable (1)/Disable (0) the NoScope round during warmup
 // -
